sasql/tests/compile_fail/grant_rejected.rs
fn main() {
    let _ = sasql::query!("GRANT SELECT ON users TO public");
}
