sasql/tests/compile_fail/grant_rejected.stderr
error: unsupported statement type: `grant`. sasql supports SELECT, INSERT, UPDATE, DELETE
 --> tests/compile_fail/grant_rejected.rs:2:13
  |
2 |     let _ = sasql::query!("GRANT SELECT ON users TO public");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sasql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
